alignment issue fixed

--- a/wp-content/themes/sayidan/style8233.css
+++ b/wp-content/themes/sayidan/style8233.css
@@ -1757,6 +1757,7 @@ h1.page-title{  text-transform: uppercase; font-size:20pt;}
   .block-links .column-news .post-desc-wrapper {
     width: 60%;
   }
+  
 }
 .block-links .column-career .career-content{
   overflow-y: scroll;
@@ -1899,6 +1900,8 @@ h1.page-title{  text-transform: uppercase; font-size:20pt;}
 
 .alumni-interview {
   background-size: cover;
+  margin-top: 5%;
+  
 
 }
 .alumni-interview .interview-wrapper {
@@ -1960,6 +1963,7 @@ h1.page-title{  text-transform: uppercase; font-size:20pt;}
 @media (max-width: 991px) {
   .alumni-interview .interview-wrapper {
     padding: 40px 0;
+    margin-top: 10%;
   }
 }
 @media (min-width: 992px) {
@@ -1972,6 +1976,7 @@ h1.page-title{  text-transform: uppercase; font-size:20pt;}
   .alumni-interview {
     background:none!important;
     background-color: #ffffff;
+    
   }
 }
 
